--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -4,7 +4,7 @@
   (set-default-font "Inconsolata")
   (set-face-attribute 'default nil
                       :family "Inconsolata"
-                      :height 120
+                      :height 110
                       :weight 'normal
                       :width 'normal)
 #+END_SRC
@@ -53,6 +53,29 @@
   :ensure t
   :init
   (beacon-mode 1))
+#+END_SRC
+* Evil-Mode
+#+BEGIN_SRC emacs-lisp
+(use-package evil
+  :ensure t ;; install the evil package if not installed
+  :init ;; tweak evil's configuration before loading it
+  (setq evil-search-module 'evil-search)
+  (setq evil-ex-complete-emacs-commands nil)
+  (setq evil-vsplit-window-right t)
+  (setq evil-split-window-below t)
+  (setq evil-shift-round nil)
+  (setq evil-want-C-u-scroll t)
+  :config ;; tweak evil after loading it
+  (evil-mode))
+#+END_SRC
+** Key chord to enable "jk" to exit insert mode
+#+BEGIN_SRC emacs-lisp
+(use-package key-chord
+  :ensure t
+  :config
+  (key-chord-mode 1)
+  (key-chord-define evil-insert-state-map  "fd" 'evil-normal-state)
+  (key-chord-define evil-insert-state-map  "jk" 'evil-normal-state))
 #+END_SRC
 * Simplify yes and no answers
 #+BEGIN_SRC emacs-lisp
